Fixed UA block issue on tablet

--- a/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
+++ b/docroot/sites/all/themes/ambitious/sass/issue-fixing.scss
@@ -1172,12 +1172,15 @@ body .view-display-id-stream_forum_page .show_hot .icon-Hottopic {
   }
 }
 
-// Forum text - Title
-.posts-columns.columns-full .row .forum-text{
-  clear: both;
-}
-
 // My voice info image
 .visual .img-holder img{
   width: auto;
+}
+// Home page UA block
+.posts-columns h2{
+  @include breakpoint($tablet-range){
+    font-size: 32px;
+    line-height: 36px
+  }
+
 }
